Atividade/pod-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-mysql
  labels:
    app: pod-mysql
spec:
  ports:
    - port: 3306
      containers:
      - containerPort: 80
      - image: mysql:stable
        name: mysql
        env:
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mysql-pass
              key: password
