Atividade/svc-pod-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-mysql
spec:
  type: ClusterIP
  selector:
    app: pod-mysql
  ports:
  - port: 80
    targetPort: 80
