Atividade/svc-pod-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-nginx
spec:
  type: ClusterIP
  selector:
    app: pod-nginx
  ports:
  - port: 80
    targetPort: 80
