Atividade/ingresse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernets.io/ingress.class: addon-http-aplication-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: pod-nginx
            port:
              number: 80
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: pod-mysql
            port:
              number: 80
